--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>My Website</title>
     <link rel="stylesheet" href="aboutMe.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <div class="header">
