--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,7 @@
   <head>
     <title>My Website</title>
     <link rel="stylesheet" href="portfolio.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <div class="header">
@@ -17,7 +18,7 @@
     </div>
     <div class="body">
       <span>My projects</span>
-      <a href="">
+      <a href="https://rsdfe1508.github.io/supersimple-website/" target="_blank">
         <div class="youtube-project">
           first website online
         </div>
