--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
         Portfolio
       </div>
       <div class="header-bottom-sect">
-        <a href="aboutMe.html"><div class="about-me">About me</div></a>
+        <a href="index.html"><div class="about-me">About me</div></a>
         <div class="projects">portfolio</div>
         <a href="credits.html"><div class="credits">credits</div></a>
       </div>
