--- a/credits.html
+++ b/credits.html
@@ -11,7 +11,7 @@
         Credits
       </div>
       <div class="header-bottom-sect">
-        <a href="index.html"><div class="about-me">About me</div></a>
+        <a href="aboutMe.html"><div class="about-me">About me</div></a>
         <a href="portfolio.html"><div class="projects">portfolio</div></a>
         <div class="credits">credits</div>
       </div>
